--- a/cpanel.yml
+++ b/cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/hydk5178/kercode-rncp/public_html/
-    - /bin/cp $DEPLOYPATH
+    - /bin/cp * $DEPLOYPATH
