--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "Project\\" : "./app"
         }
     },
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.3"
+    }
 }
